--- a/PRG2/WebContent/user/registroUsuariosAdmin.xhtml
+++ b/PRG2/WebContent/user/registroUsuariosAdmin.xhtml
@@ -45,7 +45,7 @@
 
 				<p:panelGrid columns="2">
 					<p:commandButton action="#{userBean.modificarUsuario}"
-						value="Modificar Usuario" update="grid" />
+						value="Modificar Usuario" update="users" />
 				</p:panelGrid>
 			</h:form>
 		</div>
