--- a/PRG2/WebContent/user/indexUsuario.xhtml
+++ b/PRG2/WebContent/user/indexUsuario.xhtml
@@ -90,38 +90,39 @@
 								<h:outputText value="#{rs.countSheets}"></h:outputText>
 							</p:column>
 						</p:dataTable>
-						
+
 						<h:form>
-								<p:dialog widgetVar="dialogNuevaRepetida" modal="true"
-									resizable="false" draggable="false" closable="false">
+							<p:dialog widgetVar="dialogNuevaRepetida" modal="true"
+								resizable="false" draggable="false" closable="false">
 
-									<h:panelGrid id="gridNuevaRepetida" columns="2" cellpadding="5">
+								<h:panelGrid id="gridNuevaRepetida" columns="2" cellpadding="5">
 
-										<h:outputLabel for="numberSheet" value="Numero de la ficha: *" />
-										<p:inputText id="numberSheet"
-											value="#{repeatedsheetBean.repeatedsheet.numberSheets}"
-											required="true">
-											<f:validateLength maximum="2" />
-											<f:validateDoubleRange minimum="1" maximum="670" />
-										</p:inputText>
+									<h:outputLabel for="numberSheet" value="Numero de la ficha: *" />
+									<p:inputText id="numberSheet"
+										value="#{repeatedsheetBean.repeatedsheet.numberSheets}"
+										required="true">
+										<f:validateLength maximum="2" />
+										<f:validateDoubleRange minimum="1" maximum="670" />
+									</p:inputText>
 
-										<h:outputLabel for="countSheets" value="Cuantas Fichas: *" />
-										<p:inputText id="countSheets"
-											value="#{repeatedsheetBean.repeatedsheet.countSheets}"
-											required="true">
-											<f:validateLength maximum="2" />
-											<f:validateDoubleRange minimum="1" />
-										</p:inputText>
-									</h:panelGrid>
+									<h:outputLabel for="countSheets" value="Cuantas Fichas: *" />
+									<p:inputText id="countSheets"
+										value="#{repeatedsheetBean.repeatedsheet.countSheets}"
+										required="true">
+										<f:validateLength maximum="2" />
+										<f:validateDoubleRange minimum="1" />
+									</p:inputText>
+								</h:panelGrid>
 
-									<h:panelGrid columns="2">
-										<p:commandButton action="#{repeatedsheetBean.adicionarRepeatedsheet}" value="Agregar"
-											update="@([id$=NuevaRepetidaTabla])" />
-										<p:commandButton onclick="PF('dialogNuevaRepetida').hide()"
-											value="Cerrar" update="@([id$=gridNuevaRepetida])" />
-									</h:panelGrid>
-								</p:dialog>
-							</h:form>
+								<h:panelGrid columns="2">
+									<p:commandButton
+										action="#{repeatedsheetBean.adicionarRepeatedsheet}"
+										value="Agregar" update="@([id$=NuevaRepetidaTabla])" />
+									<p:commandButton onclick="PF('dialogNuevaRepetida').hide()"
+										value="Cerrar" update="@([id$=gridNuevaRepetida])" />
+								</h:panelGrid>
+							</p:dialog>
+						</h:form>
 
 					</p:tab>
 
@@ -153,7 +154,29 @@
 					</p:tab>
 
 					<p:tab title="Otra Busqueda">
+						<p:dataTable var="laminasAVender" value="#{missingsheetBean.laminasAVender}"
+							paginator="true" cellpadding="5" border="1" rows="6">
 
+							<p:column headerText="Id">
+								<h:outputText value="#{laminasAVender.id}" />
+							</p:column>
+
+							<p:column headerText="Usuario" sortBy="#{user.userName}">
+								<h:outputText value="#{laminasAVender.userName}" />
+							</p:column>
+
+							<p:column headerText="Nombre completo">
+								<h:outputText value="#{laminasAVender.fullName}" />
+							</p:column>
+
+							<p:column headerText="E-mail">
+								<h:outputText value="#{laminasAVender.emailAddress}" />
+							</p:column>
+
+							<p:column headerText="Telefono">
+								<h:outputText value="#{laminasAVender.phoneNumber}" />
+							</p:column>
+						</p:dataTable>
 					</p:tab>
 
 				</p:tabView>
